--- a/art-gallery-website/starter-code/index.html
+++ b/art-gallery-website/starter-code/index.html
@@ -67,7 +67,7 @@
   </main> 
 
   <footer class="footer">
-    <h3>Modern Art Gallery</h3>
+    <h3><span>Modern</span> Art Gallery</h3>
     <p>The Modern Art Gallery is free to all visitors and open seven days a week 
       from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
       <section class="footer__social-media">
